correct auth error
