# api/controllers/user/reset-password.js
@@ -47,21 +47,28 @@ module.exports = {
         error: "Your reset token is either invalid or expired",
       });
  }
+  // Look up the user with this reset token.
  var user = await User.findOne({ passwordResetToken: inputs.token });
+
  if (!user || user.passwordResetTokenExpiresAt <= Date.now()) {
   return exits.invalidToken({
     error: "Your reset token is either invalid or expired",
   });
 }
+// Hash the new password.
 const hashedPassword = await sails.helpers.passwords.hashPassword(
   inputs.password
 );
+
+// update the new user password
 
 await User.updateOne({ id: user.id }).set({
   password: hashedPassword,
   passwordResetToken: "",
   passwordResetTokenExpiresAt: 0,
 });
+
+// Generate New JWT token and Send
 const token = await sails.helpers.generateNewJwtToken(user.email);
 this.req.user = user;
 return exits.success({
